# fastapi-saml-keycloak

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev_setup.sh  pyproject.toml  requirements.txt  setup_keycloak.sh  test_e2e.py
app/: main.py  saml_config.py
app/saml/: idp_metadata.xml
app/templates/: base.html  index.html  profile.html
k8s/: fastapi.yaml  keycloak.yaml
